force-app/main/04_architecturalPatterns/multiStepWorkflows/objects/ASR_Customer_Onboarding__c/ASR_Customer_Onboarding__c.object-meta.xml
<CustomObject>
    <label>Customer Onboarding</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Onboarding ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Onboardings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>