force-app/main/04_architecturalPatterns/multiStepWorkflows/objects/ASR_Customer_Onboarding__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Customer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>