force-app/main/04_architecturalPatterns/multiStepWorkflows/objects/ASR_Customer_Onboarding__c/fields/Settings__c.field-meta.xml
<CustomField>
    <fullName>Settings__c</fullName>
    <label>Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>